roles/logging-kibana/templates/01-deploy-logging-kibana.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logging-kibana
  namespace: logging
  labels:
    app: logging-kibana
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
  selector:
    matchLabels:
      app: logging-kibana
  template:
    metadata:
      labels:
        app: logging-kibana
      annotations:

    spec:
      automountServiceAccountToken: true
      securityContext:
        fsGroup: 1000
      volumes:
      containers:
      - name: kibana
        securityContext:
          capabilities:
            drop:
            - ALL
          runAsNonRoot: true
          runAsUser: 1000
        image: "registry.cn-guangzhou.aliyuncs.com/kansctl/kibana:v7.17.3"
        imagePullPolicy: "IfNotPresent"
        readinessProbe:
          failureThreshold: 3
          initialDelaySeconds: 10
          periodSeconds: 10
          successThreshold: 3
          timeoutSeconds: 5
          exec:
            command:
              - bash
              - -c
              - |
                [...]
        ports:
        - containerPort: 5601
        resources:
          limits:
            cpu: 1000m
            memory: 2Gi
          requests:
            cpu: 1000m
            memory: 2Gi
        volumeMounts:
