roles/logging-kibana/templates/02-svc-logging-kibana.yml
---
apiVersion: v1
kind: Service
metadata:
  namespace: logging
  name: logging-kibana
  labels:
    app: logging-kibana
spec:
  type: ClusterIP
  ports:
    - port: 5601
      protocol: TCP
      name: http
      targetPort: 5601
  selector:
    app: logging-kibana
